tests/negative/semantics/return_type_lie.stream
// EXPECT: Error
function fake() -> Int {
    return true; // ERROR: Type mismatch
}
fake();